--- a/FigurineCuisine/Pages/Index.cshtml
+++ b/FigurineCuisine/Pages/Index.cshtml
@@ -8,3 +8,48 @@
     <h1 class="display-4">Figurines</h1>
     <p>Your trusted figurine seller</p>
 </div>
+
+<div class="card-columns">
+    <div class="card">
+        <div class="card-img" style="background-image:url('');"></div>
+        <div class="card-body">
+            <h5 class="card-title">Anime</h5>
+        </div>
+    </div>
+
+    <div class="card">
+        <div class="card-img" style="background-image:url('');"></div>
+        <div class="card-body">
+            <h5 class="card-title">Wooden</h5>
+        </div>
+    </div>
+
+    <div class="card">
+        <div class="card-img" style="background-image:url('');"></div>
+        <div class="card-body">
+            <h5 class="card-title">Cartoon</h5>
+        </div>
+        
+    </div>
+
+    <div class="card">
+        <div class="card-img" style="background-image:url('');"></div>
+        <div class="card-body">
+            <h5 class="card-title">Prehistoric</h5>
+        </div>
+    </div>
+
+    <div class="card">
+        <div class="card-img" style="background-image:url('');"></div>
+        <div class="card-body">
+            <h5 class="card-title">Toys</h5>
+        </div>
+    </div>
+
+    <div class="card">
+        <div class="card-img" style="background-image:url('');"></div>
+        <div class="card-body">
+            <h5 class="card-title">Others</h5>
+        </div>
+    </div>
+</div>
