--- a/FigurineCuisine/Pages/Index.cshtml
+++ b/FigurineCuisine/Pages/Index.cshtml
@@ -11,7 +11,7 @@
 
 <div class="card-columns">
     <div class="card">
-        <div class="card-img" style="background-image:url('');"></div>
+        <div class="card-img" style="background-image:url('https://github.com/PompPomp/FigurineCuisine/blob/master/FigurineCuisine/img/animefigurine.jpgjpg');"></div>
         <div class="card-body">
             <h5 class="card-title">Anime</h5>
         </div>
