some rough styling

--- a/FigurineCuisine/Pages/Index.cshtml
+++ b/FigurineCuisine/Pages/Index.cshtml
@@ -10,8 +10,8 @@
 </div>
 
 <div class="card-columns">
-    <div class="card">
-        <div class="card-img" style="background-image:url('https://github.com/PompPomp/FigurineCuisine/blob/master/FigurineCuisine/img/animefigurine.jpgjpg');"></div>
+    <div class="card" style="width: 500px">
+        <div class="card-img" style="background-image:url('https://user-images.githubusercontent.com/95033102/176804028-482ed18c-9bbd-4dfd-bdf5-b868b9220f10.jpg'); height: 500px; width: 500px;"></div>
         <div class="card-body">
             <h5 class="card-title">Anime</h5>
         </div>
