Login and registration scaffolding

--- a/FigurineCuisine/Pages/Index.cshtml
+++ b/FigurineCuisine/Pages/Index.cshtml
@@ -10,10 +10,13 @@
 </div>
 
 <div class="card-columns">
-    <div class="card" style="width: 500px">
-        <div class="card-img" style="background-image:url('https://user-images.githubusercontent.com/95033102/176804028-482ed18c-9bbd-4dfd-bdf5-b868b9220f10.jpg'); height: 500px; width: 500px;"></div>
+    <div class="card">
+        <div class="card-img" style="background-image:url('https://user-images.githubusercontent.com/95033102/176804028-482ed18c-9bbd-4dfd-bdf5-b868b9220f10.jpg');"></div>
         <div class="card-body">
             <h5 class="card-title">Anime</h5>
+        </div>
+        <div class="card-footer">
+            <button>Show Items</button>
         </div>
     </div>
 
@@ -22,27 +25,8 @@
         <div class="card-body">
             <h5 class="card-title">Wooden</h5>
         </div>
-    </div>
-
-    <div class="card">
-        <div class="card-img" style="background-image:url('');"></div>
-        <div class="card-body">
-            <h5 class="card-title">Cartoon</h5>
-        </div>
-        
-    </div>
-
-    <div class="card">
-        <div class="card-img" style="background-image:url('');"></div>
-        <div class="card-body">
-            <h5 class="card-title">Prehistoric</h5>
-        </div>
-    </div>
-
-    <div class="card">
-        <div class="card-img" style="background-image:url('');"></div>
-        <div class="card-body">
-            <h5 class="card-title">Toys</h5>
+        <div class="card-footer">
+            <button>Show Items</button>
         </div>
     </div>
 
@@ -51,5 +35,9 @@
         <div class="card-body">
             <h5 class="card-title">Others</h5>
         </div>
+        <div class="card-footer">
+            <button>Show Items</button>
+        </div>
     </div>
+
 </div>
