--- a/FigurineCuisine/wwwroot/css/site.css
+++ b/FigurineCuisine/wwwroot/css/site.css
@@ -80,6 +80,15 @@ body {
     line-height: 60px; /* Vertically center the text there */
 }
 
-.card-img {
-    height: 100px;
+.card-columns .card-img {
+    height: 400px;
+    vertical-align: bottom;
+    background-position: center; /* Center the image */
+    background-repeat: no-repeat; /* Do not repeat the image */
+    background-size: cover; /* Resize the background image to cover the entire container */
+    opacity: .8;
+}
+
+button{
+    border: none;
 }
