--- a/FigurineCuisine/Pages/Shared/_Layout.cshtml
+++ b/FigurineCuisine/Pages/Shared/_Layout.cshtml
@@ -6,7 +6,7 @@
     <title>@ViewData["Title"] - Figurine Cuisine</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
-    <link rel="stylesheet" href="~/css/bootstrap.min.css" />
+    @*<link rel="stylesheet" href="~/css/bootstrap.min.css" />*@
 
 </head>
 <body>
