--- a/FigurineCuisine/Pages/Figurines/Index.cshtml
+++ b/FigurineCuisine/Pages/Figurines/Index.cshtml
@@ -1,6 +1,5 @@
-﻿@page
+﻿@page "{searchString?}"
 @model FigurineCuisine.Pages.Figurines.IndexModel
-
 @{
     ViewData["Title"] = "Index";
 }
@@ -10,6 +9,7 @@
 <p>
     <a asp-page="Create">Create New</a>
 </p>
+
 <form>
     <p>
         Title: <input type="text" asp-for="SearchString" />
@@ -18,6 +18,7 @@
 </form>
 
 <table class="table">
+
     <thead>
         <tr>
             <th>
@@ -32,42 +33,33 @@
             <th>
                 @Html.DisplayNameFor(model => model.Figurine[0].Manufacturer)
             </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Figurine[0].PublishedDate)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Figurine[0].Price)
-            </th>
+            <th> @Html.DisplayNameFor(model => model.Figurine[0].Price) </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model.Figurine) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.RetailerID)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Brand)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Manufacturer)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.PublishedDate)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Price)
-            </td>
-            <td>
-                <a asp-page="./Edit" asp-route-id="@item.ID">Edit</a> |
-                <a asp-page="./Details" asp-route-id="@item.ID">Details</a> |
-                <a asp-page="./Delete" asp-route-id="@item.ID">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model.Figurine)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.RetailerID)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Brand)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Manufacturer)
+                </td>
+                <td> @Html.DisplayFor(modelItem => item.Price) </td>
+                <td>
+                    <a asp-page="./Edit" asp-route-id="@item.ID">Edit</a> |
+                    <a asp-page="./Details" asp-route-id="@item.ID">Details</a> |
+                    <a asp-page="./Delete" asp-route-id="@item.ID">Delete</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
