Added audit and error handling

--- a/FigurineCuisine/Pages/Index.cshtml
+++ b/FigurineCuisine/Pages/Index.cshtml
@@ -12,30 +12,30 @@
 <div class="card-columns">
     <div class="card">
         <div class="card-img" style="background-image:url('https://user-images.githubusercontent.com/95033102/176804028-482ed18c-9bbd-4dfd-bdf5-b868b9220f10.jpg');"></div>
-        <div class="card-body">
-            <h5 class="card-title">Anime</h5>
+        <div class="card-body" style="display: flex; justify-content: center; align-items: center;">
+            <h4 class="card-title">Anime</h4>
         </div>
-        <div class="card-footer">
+        <div class="card-footer" style="display: flex; justify-content: center; align-items: center;">
             <button>Show Items</button>
         </div>
     </div>
 
     <div class="card">
-        <div class="card-img" style="background-image:url('');"></div>
-        <div class="card-body">
-            <h5 class="card-title">Wooden</h5>
+        <div class="card-img" style="background-image:url('https://image-cdn.hypb.st/https%3A%2F%2Fhypebeast.com%2Fimage%2F2019%2F10%2Flego-originals-wooden-figure-0.jpg?w=960&cbr=1&q=90&fit=max');"></div>
+        <div class="card-body" style="display: flex; justify-content: center; align-items: center;">
+            <h4 class="card-title">Wooden</h4>
         </div>
-        <div class="card-footer">
+        <div class="card-footer" style="display: flex; justify-content: center; align-items: center;">
             <button>Show Items</button>
         </div>
     </div>
 
     <div class="card">
-        <div class="card-img" style="background-image:url('');  "></div>
-        <div class="card-body">
-            <h5 class="card-title">Others</h5>
+        <div class="card-img" style="background-image:url('https://upload.wikimedia.org/wikipedia/commons/1/17/Status_of_Kuan_Yin.jpg');"></div>
+        <div class="card-body" style="display: flex; justify-content: center; align-items: center;">
+            <h4 class="card-title">Others</h4>
         </div>
-        <div class="card-footer">
+        <div class="card-footer" style="display: flex; justify-content: center; align-items: center;">
             <button>Show Items</button>
         </div>
     </div>
