--- a/FigurineCuisine/Pages/Index.cshtml
+++ b/FigurineCuisine/Pages/Index.cshtml
@@ -11,7 +11,7 @@
 
 <div class="card-columns">
     <div class="card">
-        <div class="card-img" style="background-image:url('https://user-images.githubusercontent.com/95033102/176804028-482ed18c-9bbd-4dfd-bdf5-b868b9220f10.jpg');"></div>
+        <div class="card-img" style="background-image:url('https://www.sideshow.com/storage/product-images/911209/anya-forger_spy-x-family_gallery_6297b5207521b.jpg');"></div>
         <div class="card-body" style="display: flex; justify-content: center; align-items: center;">
             <h4 class="card-title">Anime</h4>
         </div>
