--- a/FigurineCuisine/Pages/Figurines/Create.cshtml
+++ b/FigurineCuisine/Pages/Figurines/Create.cshtml
@@ -44,6 +44,11 @@
                 <span asp-validation-for="Figurine.Price" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Figurine.Category" class="control-label"></label>
+                <input asp-for="Figurine.Category" class="form-control" />
+                <span asp-validation-for="Figurine.Price" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
