--- a/FigurineCuisine/Areas/Identity/Pages/Account/Register.cshtml
+++ b/FigurineCuisine/Areas/Identity/Pages/Account/Register.cshtml
@@ -27,9 +27,19 @@
             <hr />
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
+                <label asp-for="Input.Username"></label>
+                <input asp-for="Input.Username" class="form-control" />
+                <span asp-validation-for="Input.Username" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="Input.Email"></label>
                 <input asp-for="Input.Email" class="form-control" />
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Input.PhoneNumber"></label>
+                <input asp-for="Input.PhoneNumber" class="form-control" />
+                <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Input.Password"></label>
@@ -42,7 +52,7 @@
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
             <br />
-            <div class="form-group" >
+            <div class="form-group">
                 <input asp-for="Input.Recaptcha" id="txtcaptcha" type="text" style="display:none" class="form-control" />
                 <div id="divcaptcha"></div>
                 <span asp-validation-for="Input.Recaptcha" class="text-danger"></span>
