--- a/FigurineCuisine/Pages/Privacy.cshtml
+++ b/FigurineCuisine/Pages/Privacy.cshtml
@@ -5,4 +5,17 @@
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<p>We are group of Ngee Ann Polytechnic students studying in the School of ICT, Cybersecurity and Digital Forensics. All rights reserved.</p>
+
+
+<h2>About Us</h2>
+<br />
+<br />
+<h3>Lee Wee Kang</h3>
+<p>I am Wee Kang</p>
+
+<h3>Zi Ren</h3>
+<p>I am Zi Ren</p>
+
+<h3>Long Teck</h3>
+<p>I am Long Teck</p>
