fixed shopping cart

--- a/FigurineCuisine/Pages/Shared/_LoginPartial.cshtml
+++ b/FigurineCuisine/Pages/Shared/_LoginPartial.cshtml
@@ -12,7 +12,7 @@
         </li>
         <li class="nav-item">
             <a id="manage" class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">
-                <div class="card-img" style="background-image:url('https://www.sideshow.com/storage/product-images/911209/anya-forger_spy-x-family_gallery_6297b5207521b.jpg');"></div>
+                <img src='https://www.sideshow.com/storage/product-images/911209/anya-forger_spy-x-family_gallery_6297b5207521b.jpg'>
             </a>
         </li>
         <li class="nav-item">
