--- a/FigurineCuisine/Pages/Shared/_LoginPartial.cshtml
+++ b/FigurineCuisine/Pages/Shared/_LoginPartial.cshtml
@@ -11,8 +11,8 @@
             <a id="manage" class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
         </li>
         <li class="nav-item">
-            <a id="manage" class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">
-                <img src='https://www.sideshow.com/storage/product-images/911209/anya-forger_spy-x-family_gallery_6297b5207521b.jpg'>
+            <a id="checkOut" class="nav-link text-dark" asp-area="" asp-page="/CheckOut" title="CheckOut">
+                <img src='https://static.vecteezy.com/system/resources/previews/004/999/463/original/shopping-cart-icon-illustration-free-vector.jpg' width="38" height="30">
             </a>
         </li>
         <li class="nav-item">
