--- a/FigurineCuisine/Pages/Index.cshtml
+++ b/FigurineCuisine/Pages/Index.cshtml
@@ -31,7 +31,7 @@
     </div>
 
     <div class="card">
-        <div class="card-img" style="background-image:url('https://upload.wikimedia.org/wikipedia/commons/1/17/Status_of_Kuan_Yin.jpg');"></div>
+        <div class="card-img" style="background-image:url('https://i.ebayimg.com/images/g/QKkAAOSwiyRheDbK/s-l500.jpg');"></div>
         <div class="card-body" style="display: flex; justify-content: center; align-items: center;">
             <h4 class="card-title">Others</h4>
         </div>
