--- a/FigurineCuisine/Pages/Products.cshtml
+++ b/FigurineCuisine/Pages/Products.cshtml
@@ -7,13 +7,12 @@
 }
 
 <h1>Products</h1>
-
 <form>
     <p>
-        <select asp-for="Category" asp-items="Model.Category">
+        <select asp-for="FigurineCategory" asp-items="Model.Category" onchange="this.form.submit()">
             <option value="">All</option>
         </select>
-        <input type="hidden" asp-for="FigurineCategory" />
+        <p></p>
         Name: <input type="text" asp-for="SearchString"/>
         <input type="submit" value="Search" />
     </p>
