more inputs in registration

--- a/FigurineCuisine/Pages/About.cshtml
+++ b/FigurineCuisine/Pages/About.cshtml
@@ -1,14 +1,12 @@
 ﻿@page
 @model PrivacyModel
 @{
-    ViewData["Title"] = "Privacy Policy";
+    ViewData["Title"] = "About Us";
 }
 <h1>@ViewData["Title"]</h1>
 
 <p>We are group of Ngee Ann Polytechnic students studying in the School of ICT, Cybersecurity and Digital Forensics. All rights reserved.</p>
 
-
-<h2>About Us</h2>
 <br />
 <br />
 <h3>Lee Wee Kang</h3>
