--- a/FigurineCuisine/Pages/Figurines/Create.cshtml
+++ b/FigurineCuisine/Pages/Figurines/Create.cshtml
@@ -34,9 +34,9 @@
                 <span asp-validation-for="Figurine.Manufacturer" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Figurine.PublishedDate" class="control-label"></label>
-                <input asp-for="Figurine.PublishedDate" class="form-control" />
-                <span asp-validation-for="Figurine.PublishedDate" class="text-danger"></span>
+                <label asp-for="Figurine.Image" class="control-label"></label>
+                <input asp-for="Figurine.Image" class="form-control" />
+                <span asp-validation-for="Figurine.Image" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Figurine.Price" class="control-label"></label>
@@ -47,6 +47,11 @@
                 <label asp-for="Figurine.Category" class="control-label"></label>
                 <input asp-for="Figurine.Category" class="form-control" />
                 <span asp-validation-for="Figurine.Price" class="text-danger"></span>
+            </div>
+             <div class="form-group">
+                <label asp-for="Figurine.PublishedDate" class="control-label"></label>
+                <input asp-for="Figurine.PublishedDate" class="form-control" />
+                <span asp-validation-for="Figurine.PublishedDate" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
