--- a/FigurineCuisine/Areas/Identity/Pages/Account/Register.cshtml
+++ b/FigurineCuisine/Areas/Identity/Pages/Account/Register.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model RegisterModel
 @{
-    ViewData["Title"] = "Register";
+    ViewData["Title"] = "Register Now!";
 }
 <head>
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
@@ -18,78 +18,85 @@
     </script>
 </head>
 
-<h1>@ViewData["Title"]</h1>
-
 <div class="row">
-    <div class="col-md-4">
+    
+    <div class="col-md-6">
+        
+    <h1 style="text-align: center">@ViewData["Title"]</h1>
         <form asp-route-returnUrl="@Model.ReturnUrl" method="post">
-            <h4>Create a new account.</h4>
-            <hr />
-            <div asp-validation-summary="All" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Input.Username"></label>
-                <input asp-for="Input.Username" class="form-control" />
-                <span asp-validation-for="Input.Username" class="text-danger"></span>
+           <div class="form-row">
+            <div class="form-group col-md-6">
+                <label asp-for="Input.FirstName">First Name</label>
+                <input asp-for="Input.FirstName" type="text" class="form-control" id="inputUsername" placeholder="First Name">
             </div>
-            <div class="form-group">
-                <label asp-for="Input.Email"></label>
-                <input asp-for="Input.Email" class="form-control" />
-                <span asp-validation-for="Input.Email" class="text-danger"></span>
+            <div class="form-group col-md-6">
+                <label asp-for="Input.LastName">Last Name</label>
+                <input asp-for="Input.LastName" type="text" class="form-control" id="inputUsername" placeholder="Last Name">
             </div>
+        </div>
+         <div class="form-row">
             <div class="form-group">
-                <label asp-for="Input.PhoneNumber"></label>
-                <input asp-for="Input.PhoneNumber" class="form-control" />
-                <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
+                <label asp-for="Input.Email">Email</label>
+                <input asp-for="Input.Email" type="email" class="form-control" id="inputEmail" placeholder="Email">
+                <span asp-validation-for="Input.Email"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Input.Password"></label>
-                <input asp-for="Input.Password" class="form-control" />
-                <span asp-validation-for="Input.Password" class="text-danger"></span>
+        </div>
+        <div class="form-row">
+            <div class="form-group col-md-6">
+                <label asp-for="Input.Username">Username</label>
+                <input asp-for="Input.Username" type="text" class="form-control" id="inputUsername" placeholder="Username">
             </div>
-            <div class="form-group">
-                <label asp-for="Input.ConfirmPassword"></label>
-                <input asp-for="Input.ConfirmPassword" class="form-control" />
-                <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
+        </div>
+        <div class="form-row">
+            <div class="form-group col-md-6">
+                <label asp-for="Input.Password">Password</label>
+                <input asp-for="Input.Password" type="password" class="form-control" id="inputPassword" placeholder="Password">
             </div>
-            <br />
-            <div class="form-group">
-                <input asp-for="Input.Recaptcha" id="txtcaptcha" type="text" style="display:none" class="form-control" />
-                <div id="divcaptcha"></div>
-                <span asp-validation-for="Input.Recaptcha" class="text-danger"></span>
+            <div class="form-group col-md-6">
+                <label asp-for="Input.ConfirmPassword">Confirm Password</label>
+                <input asp-for="Input.ConfirmPassword" type="password" class="form-control" id="inputPassword" placeholder="Password">
             </div>
-            <br />
+        </div>
+        <div class="form-group">
+            <label asp-for="Input.Address">Address</label>
+            <input asp-for="Input.Address" type="text" class="form-control" id="inputAddress" placeholder="1234 Main Street..">
+        </div>
+        <div class="form-row">
+            <div class="form-group col-md-6">
+                <label asp-for="Input.Region">Region</label>
+                <select asp-for="Input.Region" id="inputState" class="form-control">
+                    <option selected>Choose...</option>
+                    <option>North</option>
+                    <option>North-East</option>
+                    <option>Central</option>
+                    <option>East</option>
+                    <option>West</option>
+                    
+                </select>
+            </div>
+            <div class="form-group col-md-6">
+                <label asp-for="Input.Zip">Postal Code</label>
+                <input asp-for="Input.Zip" type="text" class="form-control" id="inputPostalCode">
+            </div>
+        </div>
+        
+        <div class="form-group">
+            <input asp-for="Input.Recaptcha" id="txtcaptcha" type="text" style="display:none" class="form-control" />
+            <div id="divcaptcha"></div>
+            <span asp-validation-for="Input.Recaptcha" class="text-danger"></span>
+        </div>
+        <br />
             <button type="submit" class="btn btn-primary">Register</button>
         </form>
     </div>
+
     <div class="col-md-6 col-md-offset-2">
-        <section>
-            <h4>Use another service to register.</h4>
-            <hr />
-            @{
-                if ((Model.ExternalLogins?.Count ?? 0) == 0)
-                {
-                    <div>
-                        <p>
-                            There are no external authentication services configured. See <a href="https://go.microsoft.com/fwlink/?LinkID=532715">this article</a>
-                            for details on setting up this ASP.NET application to support logging in via external services.
-                        </p>
-                    </div>
-                }
-                else
-                {
-                    <form id="external-account" asp-page="./ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl" method="post" class="form-horizontal">
-                        <div>
-                            <p>
-                                @foreach (var provider in Model.ExternalLogins)
-                                {
-                                    <button type="submit" class="btn btn-primary" name="provider" value="@provider.Name" title="Log in using your @provider.DisplayName account">@provider.DisplayName</button>
-                                }
-                            </p>
-                        </div>
-                    </form>
-                }
-            }
-        </section>
+        <br />
+        <br />
+        <div class="col-md-12" style="display: flex; justify-content:center">
+            <br />
+            <img style="height: 80%; width: 80%" src="https://cdn.shopify.com/s/files/1/0299/6564/8008/products/bld1_large.jpg?v=1656494353" />
+        </div>
     </div>
 </div>
 
