--- a/FigurineCuisine/Pages/Shared/_Layout.cshtml
+++ b/FigurineCuisine/Pages/Shared/_Layout.cshtml
@@ -22,12 +22,11 @@
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
-                        </li>
-                        <li class="nav-item">
+                        </li>                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Products">Products</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/About">About Us</a>
                         </li>
                     </ul>
                 </div>
