--- a/FigurineCuisine/Areas/Identity/Pages/Account/Login.cshtml
+++ b/FigurineCuisine/Areas/Identity/Pages/Account/Login.cshtml
@@ -48,7 +48,7 @@
     <div class="col-md-6 col-md-offset-2">
         <div class="col-md-12" style="display: flex; justify-content:center">
             <br />
-            <img style="height: 80%; width: 80%" src="https://cdn.shopify.com/s/files/1/0299/6564/8008/products/bld1_large.jpg?v=1656494353" />
+            <img style="height: 80%; width: 80%" src="https://images.saymedia-content.com/.image/c_fit%2Ccs_srgb%2Cq_auto:eco%2Cw_620/MTc1MTEzMTczMTMxNzMyMDYz/why-are-autistic-people-drawn-to-anime.png" />
         </div>
     </div>
 </div>
