--- a/FigurineCuisine/Pages/Shared/_LoginPartial.cshtml
+++ b/FigurineCuisine/Pages/Shared/_LoginPartial.cshtml
@@ -8,7 +8,7 @@
     @if (SignInManager.IsSignedIn(User))
     {
         <li class="nav-item">
-            <a id="manage" class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
+            <a id="manage" class="nav-link text-dark" style="margin-top:5px" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @UserManager.GetUserName(User)!</a>
         </li>
         <li class="nav-item">
             <a id="checkOut" class="nav-link text-dark" asp-area="" asp-page="/CheckOut/OrderDetails" title="CheckOut">
@@ -17,7 +17,7 @@
         </li>
         <li class="nav-item">
             <form id="logoutForm" class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/Index", new { area = "" })">
-                <button id="logout" type="submit" class="nav-link btn btn-link text-dark">Logout</button>
+                <button id="logout" type="submit" class="nav-link btn btn-link text-dark" style="margin-top:2px">Logout</button>
             </form>
         </li>
     }
