--- a/FigurineCuisine/Pages/Products.cshtml
+++ b/FigurineCuisine/Pages/Products.cshtml
@@ -7,131 +7,126 @@
 @{
     ViewData["Title"] = "Products";
     Layout = "~/Pages/Shared/_Layout.cshtml";
-}
-<script>
-    $(document).ready(function () {
-        $('.minus').click(function () {
-            var $input = $(this).parent().find('input');
-            var count = parseInt($input.val()) - 1;
-            count = count < 1 ? 1 : count;
-            $input.val(count);
-            $input.change();
-            return false;
-        });
-        $('.plus').click(function () {
-            var $input = $(this).parent().find('input');
-            $input.val(parseInt($input.val()) + 1);
-            $input.change();
-            return false;
-        });
-    });
-</script>
-<style>
-    span {
-        cursor: pointer;
-    }
-
-    .minus, .plus {
-        width: 25px;
-        height: 25px;
-        background: #f2f2f2;
-        border-radius: 4px;
-        border: 1px solid #ddd;
-        display: inline-block;
-        vertical-align: middle;
-        text-align: center;
-    }
-
-    .number input {
-        height: 34px;
-        width: 100px;
-        text-align: center;
-        font-size: 26px;
-        border: 1px solid #ddd;
-        border-radius: 4px;
-        display: inline-block;
-        vertical-align: middle;
-    }
-</style>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
-<h1>Products</h1>
-<form>
-    <p>
-        <select asp-for="FigurineCategory" asp-items="Model.Category" onchange="this.form.submit()">
-            <option value="">All</option>
-        </select>
-        <p></p>
-        Name: <input type="text" asp-for="SearchString"/>
-        <input type="submit" value="Search" />
-    </p>
-</form>
-<div class="card-columns">
-    @foreach (var product in Model.Figurine)
+    Figurine? selectedProduct = default;
+    void SelectProduct(Figurine product)
     {
-        <div class="card">
-            <div class="card-img" style="background-image: url('@product.Image');">
-            </div>
-            <div class="card-body" style="display: flex; justify-content: center; align-items: center;">
-                <h5 class="card-title">@product.Name</h5>
-            </div>
-            <div class="card-footer">
-                <small class="text-muted" style="display: flex; justify-content: center; align-items: center;">
-                    <button onclick="@{FigurineCuisine.Pages.ProductsModel.SelectProduct(product);}" data-toggle="modal" data-target="#productModal" class="btn btn-primary">
-                        View More
-                    </button>
-                </small>
-            </div>
-        </div>
+        selectedProduct = product;
     }
-</div>
+}
+<!doctype html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> 
+    <style>
+        span {
+            cursor: pointer;
+        }
 
+        .minus, .plus {
+            width: 25px;
+            height: 25px;
+            background: #f2f2f2;
+            border-radius: 4px;
+            border: 1px solid #ddd;
+            display: inline-block;
+            vertical-align: middle;
+            text-align: center;
+        }
 
-<div class="modal fade" id="productModal" tabindex="-1" role="dialog" aria-labelledby="productTitle" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered" role="document">
-        @if (FigurineCuisine.Pages.ProductsModel.selectedProduct != null)
+        .number input {
+            height: 34px;
+            width: 100px;
+            text-align: center;
+            font-size: 26px;
+            border: 1px solid #ddd;
+            border-radius: 4px;
+            display: inline-block;
+            vertical-align: middle;
+        }
+    </style>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+</head>
+<body>
+    <h1>Products</h1>
+    <form>
+        <p>
+            <select asp-for="FigurineCategory" asp-items="Model.Category" onchange="this.form.submit()">
+                <option value="">All</option>
+            </select>
+        <p></p>
+        Name: <input type="text" asp-for="SearchString" />
+        <input type="submit" value="Search" />
+        </p>
+    </form>
+    <div class="card-columns">
+        @foreach (var product in Model.Figurine)
         {
-            System.Diagnostics.Debug.WriteLine(FigurineCuisine.Pages.ProductsModel.selectedProduct.Name);
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="productTitle">@FigurineCuisine.Pages.ProductsModel.selectedProduct.Name</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
+            <div class="card">
+                <div class="card-img" style="background-image: url('@product.Image');">
                 </div>
-                <div class="modal-body">
-                    <div class="card">
-                        <div class="card-img" style="background-image: url('@FigurineCuisine.Pages.ProductsModel.selectedProduct.Image');">
-                        </div>
-                        <div class="card-body">
-                            <p class="card-text">$@FigurineCuisine.Pages.ProductsModel.selectedProduct.Price</p>
-                        </div>
-                    </div>
+                <div class="card-body" style="display: flex; justify-content: center; align-items: center;">
+                    <h5 class="card-title">@product.Name</h5>
                 </div>
-                <div class="modal-footer">
-                    <form method="post">
-                        <div class="form-group">
-                            <div class="number">
-                                <label asp-for="CartItems.Quantity" class="control-label"></label>
-                                <br>
-                                <span class="minus">-</span>
-                                <input asp-for="CartItems.Quantity" class="form-control" type="text" value="1" />
-                                <span class="plus">+</span>
-                                <span asp-validation-for="CartItems.Quantity" class="text-danger"></span>
-                            </div>
-                        </div>
-                        <div class="form-group" hidden="hidden">
-                            <input asp-for="CartItems.Figurine" class="form-control" value="@FigurineCuisine.Pages.ProductsModel.selectedProduct" hidden="hidden" />
-                            <span asp-validation-for="CartItems.Figurine" class="text-danger" hidden="hidden"></span>
-                        </div>
-                        <div class="form-group">
-                            <button type="submit" value="Create" class="btn btn-primary">
-                                Add to Cart
-                            </button>
-                        </div>
-                    </form>
+                <div class="card-footer">
+                    <small class="text-muted" style="display: flex; justify-content: center; align-items: center;">
+                        <button onclick="@{FigurineCuisine.Pages.ProductsModel.SelectProduct(product);}" data-toggle="modal" data-target="#productModal" class="btn btn-primary">
+                            View More
+                        </button>
+                    </small>
                 </div>
             </div>
         }
     </div>
-</div>
+
+
+    <div class="modal fade" id="productModal" tabindex="-1" role="dialog" aria-labelledby="productTitle" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            @if (FigurineCuisine.Pages.ProductsModel.selectedProduct != null)
+            {
+                System.Diagnostics.Debug.WriteLine(FigurineCuisine.Pages.ProductsModel.selectedProduct.Name);
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="productTitle">@FigurineCuisine.Pages.ProductsModel.selectedProduct.Name</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="card">
+                            <div class="card-img" style="background-image: url('@FigurineCuisine.Pages.ProductsModel.selectedProduct.Image');">
+                            </div>
+                            <div class="card-body">
+                                <p class="card-text">$@FigurineCuisine.Pages.ProductsModel.selectedProduct.Price</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <form method="post">
+                            <div class="form-group">
+                                <div class="number">
+                                    <label asp-for="CartItems.Quantity" class="control-label"></label>
+                                    <br>
+                                    <span class="minus">-</span>
+                                    <input asp-for="CartItems.Quantity" class="form-control" type="text" value="1" />
+                                    <span class="plus">+</span>
+                                    <span asp-validation-for="CartItems.Quantity" class="text-danger"></span>
+                                </div>
+                            </div>
+                            <div class="form-group" hidden="hidden">
+                                <input asp-for="CartItems.Figurine" class="form-control" value="@FigurineCuisine.Pages.ProductsModel.selectedProduct" hidden="hidden" />
+                                <span asp-validation-for="CartItems.Figurine" class="text-danger" hidden="hidden"></span>
+                            </div>
+                            <div class="form-group">
+                                <button type="submit" value="Create" class="btn btn-primary">
+                                    Add to Cart
+                                </button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            }
+        </div>
+    </div>
+</body>
+</html>
