--- a/FigurineCuisine/Pages/Products.cshtml
+++ b/FigurineCuisine/Pages/Products.cshtml
@@ -65,10 +65,10 @@
                 </div>
                 <div class="card-footer">
                     <small class="text-muted" style="display: flex; justify-content: center; align-items: center;">
-                        <form asp-page-handler="Select" method="post">
-                            <button class="btn btn-default" data-toggle="modal" data-target="#productModal" type="submit">View More</button>
-                            <input type="hidden" name="product" value="@product"/>
-                        </form>
+                        <a href="/ProductView/@product.ID">
+                        <button class="btn btn-default" data-toggle="modal" data-target="#productModal" type="submit">View More</button>
+                        <input type="hidden" name="product" value="@product"/>
+                        </a>
                     </small>
                 </div>
             </div>
