not working cart

--- a/FigurineCuisine/Pages/ProductView.cshtml
+++ b/FigurineCuisine/Pages/ProductView.cshtml
@@ -54,10 +54,10 @@
         <div class="row2">
             <p>@Model.selectedProduct.Brand</p>
         </div>
-        @if (SignInManager.IsSignedIn(User))
+        @*@if (SignInManager.IsSignedIn(User))
         {
             @await Component.InvokeAsync("MiniCart")
-        }
+        }*@
     </div>
 </body>
 </html>
