--- a/FigurineCuisine/Pages/Products.cshtml
+++ b/FigurineCuisine/Pages/Products.cshtml
@@ -76,7 +76,7 @@
     </div>
 
 
-    <div class="modal fade" id="productModal" tabindex="-1" role="dialog" aria-labelledby="productTitle" aria-hidden="true">
+    @*<div class="modal fade" id="productModal" tabindex="-1" role="dialog" aria-labelledby="productTitle" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
             @if (FigurineCuisine.Pages.ProductsModel.SelectedProduct != null)
             {
@@ -121,7 +121,7 @@
                     </div>
                 </div>
             }
-        </div>
+        </div>*@
     </div>
 </body>
 </html>
