added abilty to add cartitems to db

--- a/FigurineCuisine/Pages/Index.cshtml
+++ b/FigurineCuisine/Pages/Index.cshtml
@@ -16,7 +16,7 @@
             <h4 class="card-title">Anime</h4>
         </div>
         <div class="card-footer" style="display: flex; justify-content: center; align-items: center;">
-            <a asp-page="./Products" asp-route-FigurineCategory="Anime">Show Items</a>
+            <a asp-page="./Products/Products" asp-route-FigurineCategory="Anime">Show Items</a>
         </div>
     </div>
 
@@ -26,7 +26,7 @@
             <h4 class="card-title">Wooden</h4>
         </div>
         <div class="card-footer" style="display: flex; justify-content: center; align-items: center;">
-            <a asp-page="./Products" asp-route-FigurineCategory="Wooden">Show Items</a>
+            <a asp-page="./Products/Products" asp-route-FigurineCategory="Wooden">Show Items</a>
         </div>
     </div>
 
@@ -36,7 +36,7 @@
             <h4 class="card-title">Others</h4>
         </div>
         <div class="card-footer" style="display: flex; justify-content: center; align-items: center;">
-            <a asp-page="./Products" asp-route-FigurineCategory="Others">Show Items</a>
+            <a asp-page="./Products/Products" asp-route-FigurineCategory="Others">Show Items</a>
         </div>
     </div>
 
