--- a/FigurineCuisine/Pages/Shared/_Layout.cshtml
+++ b/FigurineCuisine/Pages/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
                         </li>                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Products">Products</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Products/Products">Products</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/About">About Us</a>
