--- a/FigurineCuisine/Pages/Products/ProductView.cshtml
+++ b/FigurineCuisine/Pages/Products/ProductView.cshtml
@@ -59,15 +59,15 @@
                 <div class="row">
                     @if (SignInManager.IsSignedIn(User))
                     {
-                        <form method="post">
+                        <form id="add-to-cart "method="post">
                             <div class="number">
-                                <input asp-for="CartItems.ID" class="form-control" type="hidden" value="@User.Identity.Name.ToString()" />
+                                <input asp-for="Category" class="quantity" type="hidden" value="@Model.selectedProduct.Category" />
                                 <span class="minus">-</span>
-                                <input asp-for="CartItems.Quantity" class="quantity" type="text" value="1" />
-                                <span asp-validation-for="CartItems.Quantity" class="text-danger"></span>
+                                <input asp-for="Input.Quantity" class="quantity" type="text" value="1" />
+                                <span asp-validation-for="Input.Quantity" class="text-danger"></span>
                                 <span class="plus">+</span>
                                 <p>&nbsp;</p>
-                                <input asp-for="CartItems.Figurine" class="form-control" type="hidden" value="@Model.selectedProduct" />
+                                <input asp-for="Input.FigurineID" class="form-control" type="hidden" value="@Model.selectedProduct.ID" />
                                 <button class="btn btn-primary" type="submit">Add to Cart</button>
                             </div>
                         </form>
